fixed extra margin on partners section of work pages (artifact from past design), fixed but where the header text was being knocked out of the visible area at ~1141px wide

--- a/source/stylesheets/sections/workpages.css.scss
+++ b/source/stylesheets/sections/workpages.css.scss
@@ -683,9 +683,6 @@
 	text-align: center;
 	padding-bottom: 30px; 
 	
-	@media  only screen and (max-width: 760px) {
-		margin-top: 500px;
-	}
 	
 	.small-title {
 		color: #9B9B9B;
